JHRC-76: Fix padding on mobile mastersub link-block

--- a/FrontEndSrc/modules/macro/link-block/_link-block.scss
+++ b/FrontEndSrc/modules/macro/link-block/_link-block.scss
@@ -57,6 +57,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    padding: 1rem;
 
     .link-block--shaded & {
         padding: 2rem;
